--- a/GUIexample/GUIexample/GUIexample.csproj
+++ b/GUIexample/GUIexample/GUIexample.csproj
@@ -46,48 +46,64 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CardForm.cs">
+    <Compile Include="Form\Addition.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CardForm.Designer.cs">
+    <Compile Include="Form\Addition.Designer.cs">
+      <DependentUpon>Addition.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Card.cs" />
+    <Compile Include="Form\CardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form\CardForm.Designer.cs">
       <DependentUpon>CardForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DeaneryForm.cs">
+    <Compile Include="Deanery.cs" />
+    <Compile Include="Form\DeaneryForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DeaneryForm.Designer.cs">
+    <Compile Include="Form\DeaneryForm.Designer.cs">
       <DependentUpon>DeaneryForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="PassForm.cs">
+    <Compile Include="Document.cs" />
+    <Compile Include="LectureRoom.cs" />
+    <Compile Include="Pass.cs" />
+    <Compile Include="Form\PassForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PassForm.Designer.cs">
+    <Compile Include="Form\PassForm.Designer.cs">
       <DependentUpon>PassForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="SecurityForm.cs">
+    <Compile Include="Form\SecurityForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SecurityForm.Designer.cs">
+    <Compile Include="Form\SecurityForm.Designer.cs">
       <DependentUpon>SecurityForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Start.cs">
+    <Compile Include="Form\Start.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Start.Designer.cs">
+    <Compile Include="Form\Start.Designer.cs">
       <DependentUpon>Start.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TemppassForm.cs">
+    <Compile Include="Student.cs" />
+    <Compile Include="Teacher.cs" />
+    <Compile Include="Temppass.cs" />
+    <Compile Include="Form\TemppassForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TemppassForm.Designer.cs">
+    <Compile Include="Form\TemppassForm.Designer.cs">
       <DependentUpon>TemppassForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="WaggonForm.cs">
+    <Compile Include="User.cs" />
+    <Compile Include="Waggon.cs" />
+    <Compile Include="Form\WaggonForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="WaggonForm.Designer.cs">
+    <Compile Include="Form\WaggonForm.Designer.cs">
       <DependentUpon>WaggonForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -113,9 +129,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="journal.txt" />
-    <Content Include="key.txt" />
-    <Content Include="pass.txt" />
+    <Content Include="Files\journal.txt" />
+    <Content Include="Files\key.txt" />
+    <Content Include="Files\pass.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
